# le2d

./: .clang-tidy  .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  Doxyfile.in  README.md  version.cmake
assed/: CMakeLists.txt
assed/src/: app.cpp  app.hpp  file_drop.cpp  file_drop.hpp  imcpp.cpp  imcpp.hpp  log.hpp  main.cpp  save_modal.cpp  save_modal.hpp  tile_drawer.cpp  tile_drawer.hpp
assed/src/applet/: applet.cpp  applet.hpp  flipbook_editor.cpp  flipbook_editor.hpp  font_viewer.cpp  font_viewer.hpp  tile_sheet_editor.cpp  tile_sheet_editor.hpp  tileset_editor.cpp  tileset_editor.hpp
example/: CMakeLists.txt  README.md  example.cpp  quickstart.cpp
example/src/: app.cpp  app.hpp  log.hpp  main.cpp
ext/: CMakeLists.txt  depzip.json  depzip.jsonc
hog/: CMakeLists.txt
hog/src/: app.cpp  app.hpp  event_handler.hpp  level_info.cpp  level_info.hpp  log.hpp  main.cpp  prop.cpp  prop.hpp  resources.hpp
hog/src/game/: collectible.cpp  collectible.hpp  level.cpp  level.hpp  level_info.cpp  level_info.hpp  prop.cpp  prop.hpp  sidebar.cpp  sidebar.hpp
hog/src/scene/: lab.cpp  lab.hpp  scene.cpp  scene.hpp  switcher.hpp
hog/src/ui/: button.cpp  button.hpp  scroll_view.cpp  scroll_view.hpp  style.hpp  widget.cpp  widget.hpp  widget_state.hpp
lib/: CMakeLists.txt
lib/cmake_src/: build_version.hpp.in
lib/docs/: README.md  advanced_usage.md  build.md  build_integration.md  getting_started.md  library_concepts.md
lib/glsl/: default.frag  default.vert
lib/include/le2d/: animation.hpp  asset_loader.hpp  audio.hpp  audio_mixer.hpp  console.hpp  context.hpp  data_loader.hpp  drawable.hpp  error.hpp  event.hpp  file_data_loader.hpp  font.hpp  frame_stats.hpp  gamepad.hpp  geometry.hpp  input.hpp  json_io.hpp  line_geometry.hpp  line_input.hpp  nvec2.hpp  pipeline_fixed_state.hpp  primitive.hpp  random.hpp  render_instance.hpp  render_pass.hpp  render_stats.hpp  render_window.hpp  renderer.hpp  resource_pool.hpp  service_locator.hpp  shader.hpp  shader_program.hpp  shape.hpp  text_buffer.hpp  text_height.hpp  texture.hpp  texture_sampler.hpp  tile.hpp  transform.hpp  unprojector.hpp  (+10 more)
lib/include/le2d/anim/: animation.hpp  animator.hpp  interpolator.hpp  keyframe.hpp  sampler.hpp  timeline.hpp
lib/include/le2d/asset/: asset.hpp  asset_loader.hpp  asset_loader_old.hpp  asset_loaders.hpp  asset_manifest.hpp  asset_map.hpp  asset_type_loader.hpp  asset_type_loaders.hpp  load_task.hpp  loader.hpp  loaders.hpp  manifest_loader.hpp  resource_map.hpp  spir_v.hpp  store.hpp  wrap.hpp
lib/include/le2d/assets/: resource_map.hpp
lib/include/le2d/console/: command.hpp  commands.hpp  junction.hpp  printer.hpp  terminal.hpp  terminal_builder.hpp  terminal_create_info.hpp  tweak.hpp
lib/include/le2d/drawable/: draw_instance.hpp  (+8 more)
lib/src/: animation.cpp  asset_loader.cpp  common.hpp  console.cpp  context.cpp  data_loader.cpp  file_data_loader.cpp  font.cpp  gamepad.cpp  json_io.cpp  line_geometry.cpp  line_input.cpp  log.hpp  nvec2.cpp  render_pass.cpp  render_window.cpp  renderer.cpp  resource_pool.cpp  shader.cpp  shader_program.cpp  spirv.hpp  text_buffer.cpp  texture.cpp  transform.cpp  unprojector.cpp  util.cpp  vertex_array.cpp  vertex_bounds.cpp  viewport.cpp
lib/src/asset/: asset_loader.cpp  asset_loader_old.cpp  asset_loaders.cpp  asset_map.cpp  asset_type_loaders.cpp  load_task.cpp  loaders.cpp  manifest_loader.cpp
lib/src/console/: commands.cpp  junction.cpp  terminal.cpp  tweak.cpp
lib/src/detail/: audio_buffer.hpp  audio_mixer.hpp  buffer_pool.hpp  cached_sampler.hpp  context_resources.hpp  font.hpp  pipeline_pool.hpp  render_pass.hpp  render_resources.hpp  render_window.hpp  renderer.cpp  renderer.hpp  resource_factory.hpp  resources.cpp  sampler_factory.hpp  sampler_pool.hpp  shader_layout.hpp
lib/src/drawable/: input_text.cpp  sprite.cpp  text.cpp
lib/src/drawables/: input_text.cpp
lib/src/embedded/: spirv.hpp  spirv_frag.cpp  spirv_vert.cpp
lib/src/event/: dispatch.cpp  listener.cpp
lib/src/input/: action.cpp  action_mapping.cpp  dispatch.cpp  gamepad.cpp  listener.cpp  listener_mapping.cpp  router.cpp
lib/src/resource/: sampler_factory.hpp  texture.cpp
lib/src/resource_pool/: buffer_pool.cpp  pipeline_pool.cpp  sampler_pool.cpp
lib/src/resource_pools/: buffer_pool.cpp  pipeline_pool.cpp  sampler_pool.cpp
lib/src/shape/: circle.cpp  line_rect.cpp  quad.cpp  sector.cpp  sprite.cpp  super_ellipse.cpp  text.cpp  text_buffer.cpp  triangle.cpp
lib/src/shapes/: quad.cpp  sprite.cpp  text.cpp  text_buffer.cpp
lib/src/spirv/: frag.cpp  vert.cpp
lib/src/text/: line_input.cpp  text_buffer.cpp  text_geometry.cpp  util.cpp
lib/src/tile/: tile_set.cpp
lib/src/tweak/: parser.cpp  registry.cpp
(+166 files in other folders)
